# torchtrade

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SIMPLIFICATIONS.md  LICENSE  Observation_tutorial.ipynb  PR84_REVIEW_SUMMARY.md  PR94_CODE_SIMPLIFICATION_REVIEW.md  PR94_SIMPLIFIED_EXAMPLES.md  README.md  collect_live.py  data_preprocessing.ipynb  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  test_live.py
.github/: FUNDING.yml
.github/workflows/: claude.yml  docs.yml  tests.yml
benchmarks/: bench_llm_actor.py  bench_torchrl_native.py  bench_vllm_standalone.py  benchmark_futuresonestepenv.py  benchmark_seqfuturessltp.py  llm_actor_comparison.md  plot_bench.py
benchmarks/data/: spark_combined.csv
components/actors/: index.html
components/losses/: index.html
components/transforms/: index.html
docs/: .pages  Transforms.md  examples.md  getting-started.md  index.md
docs/Environments/: SeqLongOnlyEnv.md  SeqLongOnlySLTP.md
docs/Generalization-Experiments/: 0_init.md  1_ctrl.md
docs/Human Actor/: init_setup.md
docs/LLM_Text_Trader/: Initial Setup.md  vlm_setup.md
docs/LLM_Trader/: vlm_setup.md
docs/Live-Iteration/: iteration_1.md  iteration_2.md  iteration_3.md  iteration_4.md
docs/Pläne/: dezember_25.md  januar_26.md  october_25.md
docs/components/: actors.md  losses.md  transforms.md
docs/environments/: offline-rl.md  offline.md  online.md  visualization.md
docs/examples/: index.md  results.md
docs/experimental/: 1StepEnv.md  EUREKA_strategy.md  HardcodedStratTest.md  contrastive_RL.md  llm_finetune.md
docs/guides/: custom-environment.md  custom-features.md  environment-introspection.md  llm-grpo-training.md  metrics.md  reward-functions.md  sampler.md
docs/onestepenv/: experience_based_onestepenv.md
docs/stylesheets/: extra.css
environments/offline/: index.html
environments/offline-rl/: index.html
environments/online/: index.html
environments/visualization/: index.html
envs/: __init__.py
envs/alpaca/: __init__.py  obs_class.py  torch_env.py
envs/offline/: __init__.py  env.py  onestepenvs.py  sampler.py
examples/: index.html  llm_live.py
examples/llm/: __init__.py
examples/losses/: dg_mnist.py
examples/online/: MIGRATION.md
examples/results/: index.html
examples/rule_based/: README.md  live.py  offline.py
examples/transforms/: chronos_embedding_example.py  market_regime_example.py
getting-started/: index.html
guides/custom-environment/: index.html
guides/custom-features/: index.html
guides/llm-grpo-training/: index.html
guides/metrics/: index.html
guides/reward-functions/: index.html
guides/sampler/: index.html
search/: search_index.json
tests/: conftest.py  test_examples.py
tests/actor/: __init__.py  test_batched_actor.py  test_frontier_llm_actor.py  test_llm_actor.py  test_local_llm_actor.py  test_parsers.py  test_rulebased.py  test_tools.py
tests/benchmarks/: test_bench_llm_actor_smoke.py
tests/envs/: base_exchange_tests.py  test_close_action.py  test_default_behavior.py  test_env_attributes.py  test_fractional_actions.py  test_futures_position_sizing.py  test_futures_position_sizing_medium_priority.py  test_live_env_base.py  test_live_trade_state.py  test_position_state.py  test_sltp_mixin.py  test_state.py  test_termination.py
tests/fixtures/: create_test_data.py
tests/losses/: __init__.py  test_ctrl_loss.py  test_dg_loss.py  test_group_relative_pg_loss.py  test_grpo_loss.py  test_sao_loss.py  test_spo_loss.py
tests/metrics/: __init__.py  test_trading_metrics.py
tests/mocks/: alpaca.py  base.py  binance.py  bitget.py  conftest.py
tests/models/: test_observation_critic.py
tests/train/: test_dataset.py  test_llm_trainer.py  test_losses.py  test_onestep_score.py  test_peft_config.py  test_prompts.py  test_reward.py
torchtrade/: __init__.py  utils.py
torchtrade/actor/: __init__.py  base_llm_actor.py  frontier_llm_actor.py  human.py  llm_actor.py  parsers.py  (+3 more)
(+399 files in other folders)
