[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchtrade"
version = "0.0.1"
description = "Reinforcement learning environments for trading applications"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Sebastian Dittert", email = "your-email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/torchtrade/torchrl-alpaca-env"
"Bug Reports" = "https://github.com/torchtrade/torchrl-alpaca-env/issues"
"Source" = "https://github.com/torchtrade/torchrl-alpaca-env"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchtrade*"]
exclude = ["tests*"]