[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchtrade"
version = "0.0.1"
description = "Reinforcement learning environments for trading applications"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Sebastian Dittert", email = "your-email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alpaca-py",
    "python-binance",
    "python-dotenv",
    "torchrl",
    "wandb",
    "tqdm",
    "hydra-core",
    "matplotlib",
    "ta",
    "datasets",
    "trading-nets @ git+https://github.com/TorchTrade/trading-nets.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs-material",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.urls]
"Homepage" = "https://github.com/torchtrade/torchrl-alpaca-env"
"Bug Reports" = "https://github.com/torchtrade/torchrl-alpaca-env/issues"
"Source" = "https://github.com/torchtrade/torchrl-alpaca-env"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["torchtrade"]